# finance-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  bot.py  pyproject.toml  stocks.py  test_sample.py
fixtures/: abc_1d.json  abc_1mo.json
product_docs/: deploy_and_maintenance.yaml  main.yaml  roles.yaml  source_code.yaml
