[tool.poetry]
name = "finance-bot"
version = "0.1.0"
description = ""
authors = ["Ilya Osipov <070809010@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
pandas = "2.0.1"
python = "^3.10"
numpy = "1.24.3"
environs = "^9.5.0"
yfinance = "0.2.18"
python-telegram-bot = "^13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
